# Gaia

backend/: Cargo.toml
backend/migrations/: 20250531203122_create_users_table.up.sql
backend/src/: lib.rs  main.rs  router.rs  routes.rs
backend/src/models/: users.rs
backend/src/routes/: user_routes.rs
backend/tests/: user_crud.rs
frontend/src/: App.tsx  HealthCheck.tsx
