[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"]}
utoipa = { version = "5.3.1", features = [ "axum_extras" ] }
utoipa-swagger-ui = { version = "9.0.2", features = [ "axum" ]}
utoipa-axum = "0.2.0"

[dev-dependencies]
tower = "0.5.2"