[package]
name = "gaia"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"]}
utoipa = { version = "5.3.1", features = [ "axum_extras", "time", "uuid" ] }
utoipa-swagger-ui = { version = "9.0.2", features = [ "axum" ]}
utoipa-axum = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
tower-http = { version = "0.6.4", features = [ "cors", "trace" ] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [ "env-filter" ]}
sqlx = { version = "0.8.6", features = [ "postgres", "runtime-tokio-rustls", "macros", "tls-rustls", "uuid" ]}
dotenvy = "0.15.7"
uuid = { version = "1.17.0", features = [ "v4", "v7", "serde" ]}
argon2 = "0.5.3"

[dev-dependencies]
serde_json = "1.0.140"
hyper = "1.6.0"